RIHAKB-312. Remove obsolete service and entry point
